<resources>
    <string name="app_name">EduConnect</string>
    <string name="signup_title">Sign Up</string>
    <string name="login_title">Log In</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="user_type_prompt">I am a:</string>
    <string name="user_type_student">Student</string>
    <string name="user_type_tutor">Tutor</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Log In</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="signup_prompt">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_description">Enter your email address and we\'ll send you instructions to reset your password.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="tutor_dashboard_title">Tutor Dashboard</string>
    <string name="student_dashboard_title">Student Dashboard</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="institute">Institute</string>
    <string name="tutor_profile_heading">My Profile</string>
    <string name="student_profile_heading">My Profile</string>

    <string-array name="country_codes">
        <item>+1 (US)</item>
        <item>+44 (UK)</item>
        <item>+91 (IN)</item>
        <!-- Add more country codes as needed -->
    </string-array>

    <string-array name="experience_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="countries">
        <item>United States</item>
        <item>United Kingdom</item>
        <item>India</item>
        <!-- Add more countries as needed -->
    </string-array>

    <string-array name="education_categories">
        <item>Primary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>Undergraduate</item>
        <item>Master</item>
        <item>PhD</item>
    </string-array>

    <string-array name="expertise_areas">
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Computer Science</item>
        <item>Literature</item>
        <item>History</item>
        <item>Geography</item>
        <!-- Add more areas as needed -->
    </string-array>
</resources>
