<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_large"
            android:text="@string/login_title"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/padding_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_input" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/padding_medium"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_small"
                android:text="@string/signup_prompt"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_size_input" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_signup"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_input"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
