<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/signup_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/user_type_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_type_prompt"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_input"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_medium" />

        <RadioGroup
            android:id="@+id/user_type_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_medium">

            <RadioButton
                android:id="@+id/student_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type_student" />

            <RadioButton
                android:id="@+id/tutor_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type_tutor" />
        </RadioGroup>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            android:backgroundTint="@color/primary_dark"
            app:layout_constraintTop_toBottomOf="@id/user_type_radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_large" />

        <TextView
            android:id="@+id/login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_input"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_link"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="@dimen/padding_medium" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_input"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/login_prompt"
            app:layout_constraintStart_toEndOf="@id/login_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/padding_small" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
