<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/forgot_password_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_description"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_input"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            android:backgroundTint="@color/primary_dark"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_large" />

        <TextView
            android:id="@+id/back_to_login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_input"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/reset_password_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
